Lots of stuff, working on 3d

--- a/src/Classes/EditorViewController.xib
+++ b/src/Classes/EditorViewController.xib
@@ -84,6 +84,10 @@
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Inspect</string>
 						<reference key="IBUIHighlightedTitleColor" ref="772176272"/>
+						<object class="NSColor" key="IBUIDisabledTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NiAwLjI3AA</bytes>
+						</object>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
