--- a/src/EditorViewController-iPad.xib
+++ b/src/EditorViewController-iPad.xib
@@ -117,6 +117,10 @@
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Inspect Shape</string>
 						<reference key="IBUIHighlightedTitleColor" ref="459489342"/>
+						<object class="NSColor" key="IBUIDisabledTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NiAwLjI3AA</bytes>
+						</object>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
